sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-nginx-new
spec:
  selector:
    matchLabels:
      app: sample-nginx-new
  template:
    metadata:
      labels:
        app: sample-nginx-new
    spec:
      containers:
        - name: sample-nginx-new
          # contoh disini kita menggunakan versi awal
          image: nginx:alpine
          resources:
            limits:
              memory: '108Mi'
              cpu: '10m'
          ports:
            - containerPort: 80
          volumeMount:
            - name: config-key-ssh
              mountPath: /var/secret/ssh # contoh saja
              readOnly: true
      volume:
        - name: config-key-ssh
          secret:
            secretName: configkeyboss
