sample/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-nginx
  labels:
    name: sample-nginx
spec:
  containers:
    - name: sample-nginx
      image: nginx:alpine
      resources:
        limits:
          memory: '10Mi'
          cpu: '10m'
      ports:
        - containerPort: 80
