sample/pod_ns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-nginx-new
  labels:
    name: sample-nginx-new
    stack: frontend
    version: 1.1.0
  annotations:
    description: 'Pod ini untuk server frontend'
    owner: 'team@enigmacamp.com'
    version: 'v1.0'
  namespace: backend
spec:
  containers:
    - name: sample-nginx-new
      image: nginx:alpine
      resources:
        limits:
          memory: '10Mi'
          cpu: '10m'
      ports:
        - containerPort: 80
